# mltosis

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/mltosis/: __init__.py  keras2.py  keras3.py
tests/: test_keras3_conv2d_split.py  test_keras3_dense_split.py  test_keras3_qconv2d_split.py  test_keras3_qdense_split.py  test_keras3_sequential_split.py
